[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/Dialog/remove_image_dialog.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.196078, 0.133333, 0.133333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="InputEventKey" id=2]
scancode = 16777221

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="remove_image_dialog" type="Panel"]
margin_left = 36.0
margin_top = 94.0
margin_right = 473.0
margin_bottom = 214.0
rect_min_size = Vector2( 437, 120 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 421.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center][color=red]REMOVE IMAGE[/color][/center]"
text = "REMOVE IMAGE"

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 421.0
margin_bottom = 38.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.176471, 0.956863, 0.113725, 1 )
text = "select the type of image you want to remove"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 421.0
margin_bottom = 62.0
mouse_default_cursor_shape = 2
text = "Face"
items = [ "Face", null, false, 0, null, "Full Character", null, false, 1, null ]
selected = 0

[node name="Control" type="Control" parent="VBoxContainer"]
visible = false
margin_top = 66.0
margin_right = 403.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 30 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Control"]
margin_right = 403.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Control/HBoxContainer2"]
margin_right = 83.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 30 )
custom_colors/font_color = Color( 0.176471, 0.956863, 0.113725, 1 )
text = "Character ID:"
valign = 1

[node name="character_id_SpinBox" type="SpinBox" parent="VBoxContainer/Control/HBoxContainer2"]
margin_left = 87.0
margin_top = 3.0
margin_right = 161.0
margin_bottom = 27.0
size_flags_vertical = 4

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 421.0
margin_bottom = 104.0
size_flags_vertical = 3
alignment = 2

[node name="OK_Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 332.0
margin_top = 18.0
margin_right = 363.0
margin_bottom = 38.0
mouse_default_cursor_shape = 2
size_flags_vertical = 8
shortcut = SubResource( 3 )
text = "OK"

[node name="Cancel_Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 367.0
margin_top = 18.0
margin_right = 421.0
margin_bottom = 38.0
mouse_default_cursor_shape = 2
size_flags_vertical = 8
text = "Cancel"
[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_type_OptionButton_item_selected"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/OK_Button" to="." method="_on_OK_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/Cancel_Button" to="." method="_on_Cancel_Button_button_down"]
